Prod-EU/force-app/main/default/objects/Customer_Feedback__c/Customer_Feedback__c.object-meta.xml
<CustomObject>
    <label>Customer Feedback</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Customer Feedback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>