Prod-EU/force-app/main/default/objects/Customer_Feedback__c/fields/High_Level_Feedback_Box__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Feedback_Box__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>High Level Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>