Prod-EU/force-app/main/default/objects/Customer_Feedback__c/fields/Note_Box__c.field-meta.xml
<CustomField>
    <fullName>Note_Box__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>