Prod-EU/force-app/main/default/objects/Customer_Feedback__c/fields/Resolution_Box__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Box__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolution</label>
    <type>TextArea</type>
</CustomField>