Prod-EU/force-app/main/default/objects/Customer_Feedback__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Code 400 Data Entry</fullName>
                <default>true</default>
                <label>Code 400 Data Entry</label>
            </value>
            <value>
                <fullName>Code 401 Billing Error</fullName>
            </value>
            <value>
                <fullName>Code 402 Shipping Error</fullName>
            </value>
            <value>
                <fullName>Code 403 Fulfillment Error</fullName>
            </value>
            <value>
                <fullName>Code 404 Order Entry</fullName>
            </value>
            <value>
                <fullName>Code 405 Lack of Follow Up</fullName>
            </value>
            <value>
                <fullName>Code 406 Distributor</fullName>
            </value>
            <value>
                <fullName>Code 407 Phone</fullName>
            </value>
            <value>
                <fullName>Code 408 Clarity of Process</fullName>
            </value>
            <value>
                <fullName>Code 409 Quoting Error</fullName>
            </value>
            <value>
                <fullName>Code 410 Insurance</fullName>
            </value>
            <value>
                <fullName>Code 411 Online Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>